Fix issues with spacing
- GitHub link has more spacing on top of it
- All last child sections now have additional spacing below them

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -538,6 +538,7 @@ section {
 
 section:last-child {
   border: 0;
+  padding-bottom: 2rem;
 }
 
 section footer {
