--- a/static/css/portfolio.css
+++ b/static/css/portfolio.css
@@ -26,7 +26,7 @@
 }
 
 .github-link {
-	margin-top: 0.1rem;
+	margin-top: 0.35rem;
 }
 
 @supports (font-variation-settings: normal) {
